<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">A Tale of Miguxos</string>
    <string name="hello_world"> </string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="status">Status</string>
    <string name="health">Health</string>
    <string name="energy">Energy</string>
    <string name="character_status">Character Status</string>
    <string name="character_attributes">Character Attributes</string>
    <string name="plusSign">+</string>
    <string name="minusSign">-</string>

    // Attributes
    <string name="attributes">Attributes</string>
    <string name="agility">Agility</string>
    <string name="resilience">Resilience</string>
    <string name="resolve">Resolve</string>
    <string name="stamina">Stamina</string>
    <string name="strength">Strength</string>
    <string name="wit">Wit</string>

</resources>
