<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="health"
            type="com.example.model.character.status.health.Health" />

        <variable
            name="energy"
            type="com.example.model.character.status.energy.Energy" />
    </data>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/status"
                android:textColor="#000"
                android:textSize="22sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/HealthText"
                android:layout_weight="0"
                android:background="#dcdcdc"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/health"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/HealthValue"
                android:layout_weight="1"
                android:background="#d3d3d3"
                android:gravity="center"
                android:padding="20dip"
                android:text='@{Long.toString(health.current) + "/" + Long.toString(health.max)}'
                android:textColor="#000000"
                android:textSize="22sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/EnergyText"
                android:layout_weight="0"
                android:background="#b0b0b0"
                android:gravity="center"
                android:padding="18dip"
                android:text="@string/energy"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/EnergyValue"
                android:layout_weight="1"
                android:background="#a09f9f"
                android:gravity="center"
                android:padding="18dip"
                android:text='@{Long.toString(energy.current) + "/" + Long.toString(energy.max)}'
                android:textColor="#000000"
                android:textSize="22sp" />
        </TableRow>
    </TableLayout>
</layout>